objects/Funding_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <label>Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Funding Allocations</relationshipLabel>
        <relationshipName>Funding_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funding Allocations</relationshipLabel>
        <relationshipName>Funding_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Funding Allocation</label>
    <nameField>
        <displayFormat>FUN-{00000}</displayFormat>
        <label>Funding Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>